--- a/roles/dynv6/templates/dynv6.sh.j2
+++ b/roles/dynv6/templates/dynv6.sh.j2
@@ -1,7 +1,7 @@
 #!/bin/sh -e
-token=$1
-hostname=$2
-device=$3
+token={{ dynv6.token }}
+hostname=$1
+device=$2
 file=$HOME/.dynv6.addr6
 [ -e $file ] && old=`cat $file`
 
