minor variable renaming and related fixing

--- a/roles/auto-upgrade/templates/apt/apt.conf.d/50unattended-upgrades.j2
+++ b/roles/auto-upgrade/templates/apt/apt.conf.d/50unattended-upgrades.j2
@@ -1,3 +1,3 @@
-Unattended-Upgrade::Mail "{{ unattended_upgrades.notification_mail_recipient }}";
+Unattended-Upgrade::Mail "{{ unattended_upgrades_mail_recipient }}";
 Unattended-Upgrade::Automatic-Reboot "true";
 Unattended-Upgrade::Automatic-Reboot-Time "06:00";
